<resources>
    <string name="app_name">GwentHelper</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_card">Add Card</string>
    <string name="cancel">Cancel</string>
    <string name="zero">0</string>
    <string name="pass">Pass</string>
    <string name="ability_morale_boost">Morale boost</string>
    <string name="ability_hero">Hero</string>
    <string name="ability_decoy">Decoy</string>
    <string name="ability_horn">Horn</string>
    <string name="ability_mardroeme">Mardroeme</string>
    <string name="ability_young_berserker">Young berserker</string>
    <string name="ability_berserker">Berserker</string>
    <string name="ability_tight_bond">Tight bond</string>
    <string name="card_abilities">Card abilities</string>
    <string name="user1">User 1</string>
    <string name="user2">User 2</string>
    <string name="pass_msg">All data cleared!</string>
    <string name="click_reset_msg">HOLD to end round</string>
    <string name="end_game_msg">HOLD to end game</string>
    <string name="click_reset_db">HOLD to clear game scores list</string>
    <string name="gwent_helper">Gwent Helper</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="vs">VS</string>
    <string name="camera_error">Something went wrong!</string>
    <string name="end_of_game_title">End of game</string>
    <string name="end_of_game_message">%s wins!</string>
    <string name="end_of_game_tie_message">It\'s a draw!</string>
    <string name="end_of_game_positive_btn">End game</string>
    <string name="end_of_game_negative_btn">End game without saving</string>
    <string name="config_card_dialog_title">What to do with card?</string>
    <string name="config_card_dialog_negative">Edit</string>
    <string name="config_card_dialog_positive">Delete</string>
    <string name="config_card_dialog_neutral">Cancel</string>
    <string name="end_round_title">Alert</string>
    <string name="end_round_message">This action will end round for both players. You ready to end round?</string>
    <string name="exit_game_title">Alert</string>
    <string name="exit_game_message">This action will end game. Are you sure?</string>
    <string name="end_round_negative">No</string>
    <string name="end_round_positive">Yes</string>
    <string name="clear_db_title">Alert</string>
    <string name="clear_db_message">This action will clear list of all game scores. Are you sure to do this?</string>
    <string name="clear_db_negative">No</string>
    <string name="clear_db_positive">Yes</string>
    <string name="frost_true">You activate frost</string>
    <string name="frost_false">You disable frost</string>
    <string name="fog_true">You activate fog</string>
    <string name="fog_false">You disable fog</string>
    <string name="rain_true">You activate rain</string>
    <string name="rain_false">You disable rain</string>
    <string name="scores_placehoder">You didn\'t save any game yet.</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="edit_card">Edit Card</string>
    <string name="round_1">Round 1</string>
    <string name="round_2">Round 2</string>
    <string name="round_3">Round 3</string>
    <string name="round_divider">:</string>
    <string name="global_score">Global score : %s</string>
</resources>
